--- a/test1/dbt_project.yml
+++ b/test1/dbt_project.yml
@@ -27,4 +27,4 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   test1:
       entity:
-          materialized: view
+          materialized: table
